tests/invalid/structure/invalid-version.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing structure validation, verify if EDXML data with invalid version number is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3"/>
